--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -26,7 +26,13 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto right-list">
-                    <li><a href="sign-page.html"><i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> Sign In</a></li>
+                    <li>
+                        <a class="ml-5" href="#">Usuario <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                        <ul class="dropdown">
+                            <li><a href=""><i class="fa fa-user-circle" aria-hidden="true"></i> Perfil<strong></strong></a></li>
+                            <li><a href=""><i class="fa fa-sign-out" aria-hidden="true"></i> Log Out<strong>!</strong></a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
