--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,7 +2,9 @@
 <div id="container">
     <app-navbar></app-navbar>
 
-    <router-outlet></router-outlet>
+    <section class="user-detail">
+        <router-outlet></router-outlet>
+    </section>
 
     <app-footer></app-footer>
 </div>
